Almost completed data parser

--- a/python_src/proof_of_concept_for_parser.ipynb
+++ b/python_src/proof_of_concept_for_parser.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 98,
    "metadata": {},
    "outputs": [
     {
@@ -133,7 +133,7 @@
        "[261 rows x 3 columns]"
       ]
      },
-     "execution_count": 37,
+     "execution_count": 98,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -154,65 +154,163 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 99,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "users = file.loc[:,\"Author\"].unique()\n",
+    "user1 = users[0]\n",
+    "user2 = users[1]\n",
+    "u1 = file.loc[file[\"Author\"] == user1]\n",
+    "u2 = file.loc[file[\"Author\"] == user2]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 112,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Author\n",
+       "Dragonite     5.184921\n",
+       "Parmesan     13.680108\n",
+       "Vincente      8.189583\n",
+       "Zakoza        9.300379\n",
+       "Name: response_time, dtype: float64"
+      ]
+     },
+     "execution_count": 112,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df = file.loc[:,[\"Author\", \"Date\"]]\n",
+    "df[\"Date\"] = pd.to_datetime(df[\"Date\"])\n",
+    "df['block'] = ((df.Author != df.Author.shift()).cumsum())\n",
+    "mean_response_time = df.drop_duplicates('block', keep='first')['Date'].diff().mean()\n",
+    "\n",
+    "df['response_time'] = df.drop_duplicates('block', keep='first')['Date'].diff()\n",
+    "gr = df.groupby('Author').response_time\n",
+    "mean_response_times = (gr.sum() / gr.count())/pd.Timedelta(hours=1)\n",
+    "mean_response_times"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 57,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "         Frequency\n",
-      "Word              \n",
-      "yo              20\n",
-      "fo              20\n",
-      "ae              18\n",
-      "se              18\n",
-      "jst             16\n",
-      "im              11\n",
-      "get              9\n",
-      "got              9\n",
-      "gys              9\n",
-      "know             8\n",
-      "think            8\n",
-      "pt               8\n",
-      "?                8\n",
-      "like             7\n",
-      "yeah             7\n",
-      "done             7\n",
-      "qiz              7\n",
-      "idk              6\n",
-      "abot             6\n",
-      "one              6\n",
-      "cz               6\n",
-      "said             6\n",
-      "353              5\n",
-      "ight             5\n",
-      "oh               5\n",
-      "thogh            5\n",
-      "2                5\n",
-      "execise          5\n",
-      "spposed          5\n",
-      "n                5\n",
-      "fist             5\n",
-      "second           5\n",
-      "nah              5\n",
-      "’                5\n",
-      "ode              5\n",
-      "gg               5\n",
-      "call             5\n",
-      "thats            4\n",
-      "tho              4\n",
-      "sing             4\n",
-      "thee             4\n",
-      "vales            4\n",
-      "dont             4\n",
-      "need             4\n",
-      "wong             4\n",
-      "shold            4\n",
-      "data             4\n",
-      "good             4\n",
-      "qestion          4\n",
-      "model            4\n"
+      "Zakoza              Frequency\n",
+      "Word                  \n",
+      "yo                  13\n",
+      "jst                  7\n",
+      "one                  5\n",
+      "got                  5\n",
+      "im                   5\n",
+      "know                 4\n",
+      "gys                  4\n",
+      "ode                  4\n",
+      "353                  3\n",
+      "mannwhitney          3\n",
+      "need                 3\n",
+      "se                   3\n",
+      "?                    3\n",
+      "n                    3\n",
+      "pt                   3\n",
+      "nah                  3\n",
+      "ae                   3\n",
+      "qiz                  3\n",
+      "fo                   3\n",
+      "bc                   3\n",
+      "evey                 3\n",
+      "sed                  2\n",
+      "idk                  2\n",
+      "sing                 2\n",
+      "abot                 2\n",
+      "easie                2\n",
+      "aond                 2\n",
+      "get                  2\n",
+      "done                 2\n",
+      "stat                 2\n",
+      "damn                 2\n",
+      "woldnt               2\n",
+      "esidals              2\n",
+      "vale                 2\n",
+      "wong                 2\n",
+      "distibted            2\n",
+      "linea                2\n",
+      "moe                  2\n",
+      "gg                   2\n",
+      "12                   2\n",
+      "final                2\n",
+      "30                   2\n",
+      "petty                2\n",
+      "data                 2\n",
+      "mch                  2\n",
+      "lol                  2\n",
+      "patition             2\n",
+      "case                 2\n",
+      "changed              1\n",
+      "channel              1\n",
+      "             Frequency\n",
+      "Word                  \n",
+      "se                  10\n",
+      "fo                   6\n",
+      "im                   5\n",
+      "jst                  5\n",
+      "ae                   4\n",
+      "abot                 4\n",
+      "cz                   3\n",
+      "thogh                3\n",
+      "gys                  3\n",
+      "total                3\n",
+      "said                 3\n",
+      "got                  3\n",
+      "nmbes                2\n",
+      "small                2\n",
+      "contingency          2\n",
+      "table                2\n",
+      "even                 2\n",
+      "model                2\n",
+      "yeye                 2\n",
+      "fist                 2\n",
+      "v                    2\n",
+      "diectoy              2\n",
+      "histogam             2\n",
+      "yea                  2\n",
+      "something            2\n",
+      "like                 2\n",
+      "pe                   2\n",
+      "nah                  2\n",
+      "seem                 1\n",
+      "ight                 1\n",
+      "idk                  1\n",
+      "get                  1\n",
+      "mine                 1\n",
+      "p                    1\n",
+      "vales?               1\n",
+      "oh                   1\n",
+      "thee                 1\n",
+      "hint                 1\n",
+      "assign               1\n",
+      "contigency           1\n",
+      "sed                  1\n",
+      "hmm                  1\n",
+      "edid                 1\n",
+      "wong                 1\n",
+      "shold                1\n",
+      "sing                 1\n",
+      "ceate                1\n",
+      "data                 1\n",
+      "many                 1\n",
+      "times                1\n"
      ]
     }
    ],
@@ -221,7 +319,7 @@
     "# RegEx for stopwords\n",
     "RE_stopwords = r'\\b(?:{})\\b'.format('|'.join(stopwords))\n",
     "# replace '|'-->' ' and drop all stopwords\n",
-    "words = (file.Content\n",
+    "words = (u1.Content\n",
     "           .str.lower()\n",
     "           .replace([r'\\'|=|\\>|\\<|u|r|\\\"|\\:|\\,|\\.', r'\\|', RE_stopwords], ['', ' ', ''], regex=True)\n",
     "           .str.cat(sep=' ')\n",
@@ -229,17 +327,22 @@
     ")\n",
     "\n",
     "# generate DF out of Counter\n",
-    "rslt = pd.DataFrame(Counter(words).most_common(50),\n",
+    "rslt1 = pd.DataFrame(Counter(words).most_common(50),\n",
     "                    columns=['Word', 'Frequency']).set_index('Word')\n",
-    "print(rslt)"
+    "print(user1, rslt1)\n",
+    "\n",
+    "words = (u2.Content\n",
+    "           .str.lower()\n",
+    "           .replace([r'\\'|=|\\>|\\<|u|r|\\\"|\\:|\\,|\\.', r'\\|', RE_stopwords], ['', ' ', ''], regex=True)\n",
+    "           .str.cat(sep=' ')\n",
+    "           .split()\n",
+    ")\n",
+    "\n",
+    "# generate DF out of Counter\n",
+    "rslt2 = pd.DataFrame(Counter(words).most_common(50),\n",
+    "                    columns=['Word', 'Frequency']).set_index('Word')\n",
+    "print(rslt2)"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
